# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
brain_games/: cli.py  game_engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_even.py  brain_games.py  cli.py  compare_answer.py  game_logic.py  run_brain_calc.py  run_brain_even.py  run_brain_games.py  run_brain_gcd.py  run_brain_prime.py  run_brain_progression.py
